# Projet-OpenGL-M1

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: README.md
include/glad/: glad.h
src/: README.md  defines.hpp  glad.c  main.cpp  window.cpp
